<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="#3097FD"
        android:gravity="center"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_and_h5"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="#fff"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_java_h5"
        android:textAllCaps="false"
        android:id="@+id/java_call_h5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2_h5_android"
        android:textAllCaps="false"
        android:id="@+id/h5_call_video"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3_h5_android"
        android:textAllCaps="false"
        android:id="@+id/h5_call_phone"/>


</LinearLayout>